handoff from stock to instance
